# gamdl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh.md  gamdl.py  music_video_genres.py  pyproject.toml  requirements.txt  song_genres.py  storefront_ids.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  main.yml  python-publish.yml
gamdl/: __init__.py  __main__.py  apple_music_api.py  cli.py  config_file.py  constants.py  custom_formatter.py  custom_logger_formatter.py  database.py  dl.py  downloader.py  downloader_music_video.py  downloader_post.py  downloader_song.py  downloader_song_legacy.py  enums.py  exceptions.py  gamdl.py  hardcoded.py  hardcoded_wvd.py  itunes_api.py  models.py  utils.py
gamdl/api/: __init__.py  apple_music.py  apple_music_api.py  constants.py  exceptions.py  itunes.py  itunes_api.py  wrapper.py
gamdl/cli/: cli-main.py  cli.py  cli_config.py  config_file.py  constants.py  csv_processor.py  custom_logger_formatter.py  database.py  interactive_prompts.py  song_search.py  utils.py
gamdl/downloader/: __init__.py  amdecrypt.py  ammuxer.py  base.py  constants.py  downloader.py  downloader_base.py  downloader_music_video.py  downloader_song.py  downloader_uploaded_video.py  enums.py  exceptions.py  hardcoded_wvd.py  music_video.py  song.py  types.py  uploaded_video.py
gamdl/downloader/ammuxer/: Cargo.toml
gamdl/downloader/ammuxer/src/: decrypt.rs  lib.rs  media.rs  mp4.rs  mux.rs  python.rs
gamdl/downloader/muxer/: Cargo.toml
gamdl/downloader/muxer/src/: lib.rs  media.rs  mux.rs
gamdl/interface/: __init__.py  base.py  constants.py  enums.py  exceptions.py  interface.py  interface_music_video.py  interface_song.py  interface_uploaded_video.py  music_video.py  song.py  types.py  uploaded_video.py  wvd.py
gamdl/muxer/src/: decrypt.rs  lib.rs  python.rs
pywidevine/L3/: getPSSH.py
pywidevine/L3/cdm/: cdm.py  deviceconfig.py  key.py  session.py  vmp.py
pywidevine/L3/cdm/formats/: widevine_pssh_data_pb2.py  wv_proto2.proto  wv_proto2_pb2.py  wv_proto3.proto  wv_proto3_pb2.py
pywidevine/L3/decrypt/: wvdecrypt.py  wvdecryptconfig.py  wvdecryptcustom.py
src/: lib.rs
tests/: test_amdecrypt_native.py  test_ammuxer_native.py  test_apple_music_api.py  test_downloader_base.py  test_music_video_downloader.py  test_native_ammuxer.py  test_native_muxer.py  test_wrapper_api.py
