[project]
name = "gamdl"
version = "2.7"
description = "A command-line app for downloading Apple Music songs, music videos and post videos."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "async-lru>=2.0.5",
    "click>=8.3.0",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "m3u8>=6.0.0",
    "mutagen>=1.47.0",
    "pillow>=12.0.0",
    "pywidevine>=1.8.0",
    "yt-dlp>=2025.10.22",
]

[project.scripts]
gamdl = "gamdl.cli.cli:main"
